--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 background-image: url(Artwork/artcornerLeftUp_placeholder.png);
                 width: 256px;
                 height: 256px;
-                z-index: 0;
+                z-index: 1;
             }
 
             #bottomleftcorner {
@@ -65,7 +65,7 @@
                 width: 256px;
                 height: 256px;
                 bottom: 0;
-                z-index: 0;
+                z-index: 1;
             }
 
             #progressbar {
@@ -110,6 +110,15 @@
             }
             #volumebutton:hover {
                 opacity: 0.5;
+            }
+
+            @media only screen and (max-width: 900px) {
+                #progressbar {
+                    visibility: hidden;
+                }
+                #gradientback {
+                    visibility: hidden;
+                }
             }
         </style>
     </head>
