--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="velocity.min.js"></script>
         <style>
             body {
@@ -122,6 +121,7 @@
                 }
             }
         </style>
+        <!-- <meta name="viewport" content="height=device-height, initial-scale=1.0"> -->
     </head>
     <body>
         <div id="gradientback"></div>
