add twitter timeline

--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
                 opacity: 0.5;
             }
 
+            .twitter-timeline {
+                position: absolute !important;
+                right: 20px;
+                top: 10%;
+            }
+
             @media only screen and (max-width: 900px) {
                 #progressbar {
                     visibility: hidden;
@@ -154,6 +160,15 @@
             <!-- <button onclick="SeekToRelativeTime(-10);">-10 seconds</button> -->
             <!-- <button id="nextSectionButton" onclick="SeekNextSection();">Next Section: Foundations</button> -->
         </div>
+
+        <a class="twitter-timeline" href="https://twitter.com/TwitterDev/timelines/539487832448843776?ref_src=twsrc%5Etfw"
+            data-chrome="nofooter, noheader, transparent"
+            
+            width="260px"
+            height="80%"
+        >
+        </a> 
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
         <script>
             // 2. This code loads the IFrame Player API code asynchronously.
