add video with final VO

--- a/index.html
+++ b/index.html
@@ -185,40 +185,41 @@
                 {
                     'name': 'Intro',
                     'start': 0,
-                    'end': 35,
+                    'end': 50,
                     'color': '#aaaaff'
                 },
                 {
                     'name': 'Foundations',
-                    'start': 35,
-                    'interlude': (2*60) + 40,
-                    'end': 4*60,
+                    'start': 51,
+                    'interlude': (2*60) + 35,
+                    'end': (4*60) + 6,
                     'color': '#ffaa7f'
                 },
                 {
                     'name': 'Materials',
-                    'start': 4*60,
-                    'interlude': (6*60) + 5,
-                    'end': (6*60) + 46,
+                    'start': (4*60) + 7,
+                    'interlude': (6*60) + 22,
+                    'end': (7*60) + 3,
                     'color': '#aaaa7f'
                 },
                 {
                     'name': 'Decorating',
-                    'start': (6*60) + 47,
-                    'interlude': (8*60) + 51,
-                    'end': (9*60) + 48,
+                    'start': (7*60) + 5,
+                    'interlude': (8*60) + 58,
+                    'end': (9*60) + 56,
                     'color': '#ffb2d0'
                 },
                 {
                     'name': 'Nesting',
-                    'start': (9*60) + 49,
-                    'end': (11*60) + 53,
+                    'start': (9*60) + 57,
+                    'interlude': (11*60) + 23,
+                    'end': (12*60) + 19,
                     'color': '#aaff7f'
                 },
                 {
                     'name': 'Outro',
-                    'start': (11*60) + 54,
-                    'end': (13*60) + 49,
+                    'start': (12*60) + 21,
+                    'end': (13*60) + 41,
                     'color': '#bbbbbb'
                 }
             ];
@@ -229,7 +230,7 @@
             var player;
             function onYouTubeIframeAPIReady() {
                 player = new YT.Player('player', {
-                    videoId: 'gxbjV41-AlU',
+                    videoId: '1pqkiOetywk',
                     playerVars: {'controls': 0, 'modestbranding': 1, 'playsinline': 1, 'fs': 0},
                     events: {
                         'onReady': onPlayerReady,
