hide twitter timeline on smaller width screens

--- a/index.html
+++ b/index.html
@@ -132,9 +132,15 @@
             @media only screen and (max-width: 900px) {
                 #progressbar {
                     visibility: hidden;
+                    display: none;
                 }
                 #gradientback {
                     visibility: hidden;
+                    display: none;
+                }
+                .twitter-timeline {
+                    visibility: hidden;
+                    display: none;
                 }
             }
         </style>
