--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 top: 10%;
             }
 
-            @media only screen and (max-width: 900px) {
+            @media only screen and (max-width: 1000px) {
                 #progressbar {
                     visibility: hidden;
                     display: none;
@@ -139,8 +139,8 @@
                     display: none;
                 }
                 .twitter-timeline {
-                    visibility: hidden;
-                    display: none;
+                    visibility: hidden !important;
+                    display: none !important;
                 }
             }
         </style>
