--- a/index.html
+++ b/index.html
@@ -131,13 +131,15 @@
 
             @media only screen and (max-width: 1000px) {
                 #progressbar {
-                    visibility: hidden;
-                    display: none;
+                    visibility: hidden !important;
+                    display: none !important;
                 }
                 #gradientback {
-                    visibility: hidden;
-                    display: none;
+                    visibility: hidden !important;
+                    display: none !important;
                 }
+            }
+            @media only screen and (max-width: 1300px) {
                 .twitter-timeline {
                     visibility: hidden !important;
                     display: none !important;
