--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
         <div id="gradientback"></div>
 
         <div class="nav">
-            <a href="/index.html">Home</a>
+            <a href="/ChillTweetsToNestTo/index.html">Home</a>
         </div>
 
         <div class="content">
