--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </div>
 
         <div class="nav">
-            <a href="/about.html">About Us</a>
+            <a href="/ChillTweetsToNestTo/about.html">About Us</a>
         </div>
 
         <script>
