--- a/about.html
+++ b/about.html
@@ -182,17 +182,19 @@
 
         <div class="content">
             <p>
-                Chill Tweets To Nest To is an audio game which invites you to relax, discover some fasinating facts about three very special birds, and create your own personal nest. All while listening to an sublime original score.
+                Chill Tweets To Nest To is an audio game, created by Birb Squad, which invites you to relax, discover some fascinating facts about three very special birds, and create your own personal nest. All while listening to a sublime original score.
             </p>
             <p>
-                Will your nest be sparkly and dazzling like the Song Thrush, or secure and warm like the little Wren? Perhaps it will be something completely different like the Great Crested Grebe's floating nest. Whatever you decide to create, the only thing that matter is that it's perfect for whatever you need.
+                The game, and the team itself, was created as part of the Neighbourhood Jam, a game jam organised by Marina Díez, and Erin Harrison, which focuses on the creation of mental health and self-care games.
+            </p>
+            <p>
+                Initially concepted by Ben Sabin and Elizabeth Simoens, the two quickly realised that Chill Tweets To  Nest To was a bigger project than the two of them had the ability to do. Therefore, they began assembling a dream team of talented artists, musicians, and voice actors (and one incredible bird expert), all of whom were just as keen to create a chill experience during these uncertain times, which invites its participants to think harder about their own nests while the lockdown was in full effect.
+            </p>
+            <p>
+                Remember, whatever you decide to create, the only thing that matters is that it's perfect for whatever you need.
             </p>
             <p>
                 So, sit back, relax, and allow yourself a break with Chill Tweets To Nest To.
-            </p>
-            <p>
-                Chill Tweets To Nest To was created as part of The Neighbourhood Jam 2020<br>
-                #NBHJam
             </p>
             <p>
                 This game was created by:
