--- a/about.html
+++ b/about.html
@@ -181,6 +181,7 @@
         </div>
 
         <div class="content">
+            <img src="/ChillTweetsToNestTo/Artwork/CompanyLogo1.png" />
             <p>
                 Chill Tweets To Nest To is an audio game, created by Birb Squad, which invites you to relax, discover some fascinating facts about three very special birds, and create your own personal nest. All while listening to a sublime original score.
             </p>
