--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
     </head>
     <body>
         <div class="nav">
-            <a href="/ChillTweetsToNestTo/index.html">Home</a>
+            <a href="/ChillTweetsToNestTo/index.html">Nest</a>
         </div>
 
         <div class="content">
